# etsy-store-full-auto

./: .gitignore  README.md  cli.py  pyproject.toml
.claude/: creator-council.json  optimizer-council.json
analyst/: __init__.py  analyzer.py
config/: niches.json
creator/: __init__.py  content_generator.py  pdf_generator.py
docs/: GETTING_STARTED.md
optimizer/: __init__.py  analytics.py
scout/: __init__.py  extractors.py  scraper.py
tests/: __init__.py  test_analytics.py  test_analyzer.py  test_content_generator.py  test_extractors.py  test_scraper.py
tests/integration/: test_full_pipeline.py
