[project]
name = "etsy-store"
version = "0.1.0"
description = "Multi-agent Etsy digital products store with llm-council orchestration"
requires-python = ">=3.10"
dependencies = [
    "playwright>=1.40.0",
    "beautifulsoup4>=4.12.0",
    "fake-useragent>=1.4.0",
    "pandas>=2.0.0",
    "httpx>=0.25.0",
    "tenacity>=8.2.0",
    "reportlab>=4.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.4.0", "pytest-asyncio>=0.21.0"]

[tool.uv]
dev-dependencies = [
    "pytest",
    "pytest-asyncio",
    "pytest-mock>=3.15.1",
]

[project.scripts]
etsy-store = "cli:main"
